<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneDialer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bD">#</string>
    <string name="bS">*</string>
    <string name="backspace">Backspace</string>
    <string name="phone_num">Phone Number</string>

</resources>
